--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+DB_NAME=django_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
 DJANGO_SECRET_KEY=secret
